--- a/Mini_Project_Clustering.ipynb
+++ b/Mini_Project_Clustering.ipynb
@@ -1296,7 +1296,7 @@
     "# Generating the sample data from make_blobs\n",
     "# This particular setting has one distinct cluster and 3 clusters placed close\n",
     "# together.\n",
-    "X, y = make_blobs(n_samples=100,\n",
+    "x_cols = make_blobs(n_samples=100,\n",
     "                  n_features=32,\n",
     "                  centers=4,\n",
     "                  cluster_std=1,\n",
@@ -2112,7 +2112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
